# closed-world

./: README.md  closed-world.cabal
Data/: ClosedWorld.hs
Data/ClosedWorld/: Base.hs  TH.hs  Types.hs
