name:                closed-world
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tathougies/closed-world
license:             BSD3
license-file:        LICENSE
author:              Travis Athougies
maintainer:          travis@athougies.net
copyright:           2017 Travis Athougies
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.ClosedWorld Data.ClosedWorld.Types Data.ClosedWorld.TH Data.ClosedWorld.Base
  build-depends:       base >= 4.7 && < 5, containers, template-haskell, mtl, ghc-prim, lens
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tathougies/closed-world
